--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <header>
-        <h1>Site Escola</h1>
-        <ul>
-            <li>instituição</li>
-            <li>Estudantes</li>
-
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="" alt="">
+        <h1 class="cabecalho-titulo">Site Escola</h1>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-item">instituição</li>
+            <li class="cabecalho-item">Estudantes</li>
         </ul>
     </header>
 </body>
 
-</html>
+</html>                     
