--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ESCOLA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="" alt="">
-        <h1 class="cabecalho-titulo">Site Escola</h1>
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-item">instituição</li>
-            <li class="cabecalho-item">Estudantes</li>
-        </ul>
+    <header>
+        <h1>Escola Programação</h1>
+        <img src="" alt="Programando">
     </header>
+    
 </body>
-
-</html>                     
+</html>
