--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Escola Programação</h1>
-        <img src="" alt="Programando">
+        <img src="PROGRAMANDO.jpeg" alt="Programando">
     </header>
     
 </body>
