--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <h1>Escola Programação</h1>
+        <h1>O que é Programação?</h1>
         <img src="PROGRAMANDO.jpeg" alt="Programando">
     </header>
     <section class="section1">
