--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <img src="PROGRAMANDO.jpeg" alt="Programando">
     </header>
     <section class="section1">
-        <h2>section 1</h2>
+        <img src="programador.img2" alt="Programador">
+        <h2>Programador</h2>
     </section>
     <section class="section2">
-        <h3>section 2</h3>
+        <img src="laptop.jpg" alt="laptop">
+        <h3>Computador\laptop</h3>
     </section>
     
 </body>
