--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <h2>Programador</h2>
     </section>
     <section class="section2">
-        <img src="laptop.jpg" alt="laptop">
-        <h3>Computador\laptop</h3>
+        <img class="section2-imagem" src="laptop.jpg" alt="laptop">
+        <h3>Laptop</h3>
     </section>
     
 </body>
