--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <img class="section2-imagem" src="laptop.jpg" alt="laptop">
         <h3>Laptop</h3>
     </section>
+
+    <footer>
+        <img src="" alt="">
+        <p>linguagem da programação</p>
+    </footer>
     
 </body>
 </html>
