--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h3>Laptop</h3>
     </section>
 
-    <footer>
-        <img src="" alt="">
+    <footer class="rodape">
+        <img src="download.jpeg" alt="linguagem">
         <p>linguagem da programação</p>
     </footer>
     
