--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h3>Laptop</h3>
     </section>
 
-    <footer class="rodape">
-        <img src="download.jpeg" alt="linguagem">
-        <p>linguagem da programação</p>
+    <footer class=>
+        <img src=" alt="">
+        <p></p>
     </footer>
     
 </body>
